--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
         "PoisonIvy",
         "njrat",
         "Loki",
-        "CoinMiner",
-    ]
+        "CoinMiner"
+    ],
+    "limit": 1000
 }
