--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     },
     "require": {
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "ramsey/uuid": "^4.3"
     }
 }
